--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Add\AddGroup.cs" />
+    <Compile Include="Add\AddMission.cs" />
+    <Compile Include="Add\AddRebel.cs" />
     <Compile Include="Delete\DeleteRebelById.cs" />
     <Compile Include="Group.cs">
       <DependentUpon>Model.tt</DependentUpon>
@@ -105,6 +108,7 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
