some changes - tola

--- a/GUI/App.config
+++ b/GUI/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IRebellionDatabase" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:60695/RebellionDatabase.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IRebellionDatabase"
+                contract="MyServiceReference.IRebellionDatabase" name="BasicHttpBinding_IRebellionDatabase" />
+        </client>
+    </system.serviceModel>
 </configuration>
