--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\GUI\packages.config" />
   <repository path="..\Model\packages.config" />
+  <repository path="..\UnitTesting\packages.config" />
+  <repository path="..\WCF\packages.config" />
 </repositories>
