addd some changes

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\GUI\packages.config" />
   <repository path="..\Model\packages.config" />
+  <repository path="..\RebellionWcfHost\packages.config" />
   <repository path="..\UnitTesting\packages.config" />
   <repository path="..\WCF\packages.config" />
 </repositories>
