--- a/WCF/App.config
+++ b/WCF/App.config
@@ -14,7 +14,7 @@
   app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
     <services>
-      <service name="WCF.Service1">
+      <service name="WCF.Delete">
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8733/Design_Time_Addresses/WCF/Service1/" />
@@ -22,7 +22,7 @@
         </host>
         <!-- Service Endpoints -->
         <!-- Unless fully qualified, address is relative to base address supplied above -->
-        <endpoint address="" binding="basicHttpBinding" contract="WCF.IService1">
+        <endpoint address="" binding="basicHttpBinding" contract="WCF.IDelete">
           <!-- 
               Upon deployment, the following identity element should be removed or replaced to reflect the 
               identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
@@ -33,7 +33,7 @@
           </identity>
         </endpoint>
         <!-- Metadata Endpoints -->
-        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. -->
+        <!-- The Metadata Exchange endpoint is used by the service to describe itself to clients. --> 
         <!-- This endpoint does not use a secure binding and should be secured or removed before deployment -->
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
@@ -52,6 +52,11 @@
       </serviceBehaviors>
     </behaviors>
   </system.serviceModel>
+
+  <connectionStrings>
+    <add name="RebellionDataEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TRNLON11697\SQLEXPRESS;initial catalog=RebellionData;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
