--- a/UnitTesting/UnitTesting.csproj
+++ b/UnitTesting/UnitTesting.csproj
@@ -65,11 +65,16 @@
     <Compile Include="GetQueryableMockSet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelectTests.cs" />
+    <Compile Include="WCFDeleteTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Model\Model.csproj">
       <Project>{58133df5-acd2-4ab6-9bf9-0e1e3f7ff096}</Project>
       <Name>Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WCF\WCF.csproj">
+      <Project>{eacc3f1e-9c3d-48d3-80cd-55bcdcf2660d}</Project>
+      <Name>WCF</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
